fix(multi-org): align dropdown icons and fix user avatar dropdown hover styles (#5296)

--- a/src/identity/components/GlobalHeader/GlobalHeaderDropdown/GlobalHeaderDropdown.scss
+++ b/src/identity/components/GlobalHeader/GlobalHeaderDropdown/GlobalHeaderDropdown.scss
@@ -26,3 +26,8 @@
   margin: 8px;
   background-color: rgba(241, 241, 243, 0.1);
 }
+
+.global-header--align-center {
+  display: flex;
+  align-items: center;
+}
